package clases.CentroUniversitario.Charla;

public class Curso extends Charla {
    
}
