package clases.CentroUniversitario.Charla;

public class Presencial extends Charla {
    
}
