package clases.CentroUniversitario.Charla;

public class Virtual extends Charla {
    
}
