package clases.Persona;

public class Docente extends Persona {
    
}
